{{$NEXT}}

1.04      2012-11-21 17:26:33 Europe/London
- test Plack::Handler::Stomp::NoNetwork (and make it work!)

1.03      2012-09-03 19:52:02 Europe/London
- work around complicated VERSION comparison

1.02      2012-09-03 11:32:52 Europe/London
- compatibility with Net::Stomp::MooseHelpers 1.3

1.01      2012-07-10 13:08:58 Europe/London
- use the new ReconnectOnFailure wapper role

1.0       2012-03-27 12:32:30 Europe/London
- first non-devel release

0.1_02    2012-03-25 10:55:56 Europe/London
- add non-auto-detected test deps

0.1_01    2012-03-14 12:08:59 Europe/London
- Initial release
